[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu/GameOverScene.gd" type="Script" id=1]
[ext_resource path="res://world/background.png" type="Texture" id=2]
[ext_resource path="res://MyFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MainMenu/ButtonFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[node name="GameOverScene" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 500, 270 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 150.0
margin_right = 147.0
margin_bottom = 211.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -55.0
margin_right = 92.0
margin_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Your score:"

[node name="HighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = 1.0
margin_right = 92.0
margin_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Your highscore:"

[node name="PlayAgainButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = 116.5
margin_right = 98.5
margin_bottom = 161.5
custom_fonts/font = ExtResource( 5 )
text = "Play Again"

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = 189.5
margin_right = 38.5
margin_bottom = 234.5
custom_fonts/font = ExtResource( 5 )
text = "Exit"

[node name="ResetHighScore" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 384.5
margin_top = 232.5
margin_right = 492.5
margin_bottom = 277.5
custom_fonts/font = ExtResource( 5 )
text = "Reset"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ResetHighScore" to="." method="_on_Reset_pressed"]
